Correction of the mentor's comments
