# swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "version": "2.0.2",
     "title": "Water API",
-    "description": "API for user authentication",
+    "description": "API for user management and water consumption logging",
     "license": {
       "name": "MIT",
       "url": "https://opensource.org/licenses/MIT"
@@ -13,7 +13,11 @@
     {
       "url": "http://localhost:3001",
       "description": "Local development server"
-    }
+    },
+   {
+    "url":  " https://backend-225p.onrender.com/api-docs/",
+    "description": "Remote development server"
+  }
   ],
   "tags": [
     {
@@ -699,31 +703,64 @@
         "properties": {
           "name": {
             "type": "string",
-            "description": "User name",
+            "description": "User's name address",
             "example": "User name"
+          },
+          "email": {
+            "type": "string",
+            "format": "email",
+            "description": "User's email address",
+            "example": "user@example.com"
+          },
+          "password": {
+            "type": "string",
+            "description": "User's old password",
+            "example": "987654321"
+          },
+          "newPassword": {
+            "type": "string",
+            "description": "User's new password",
+            "example": "123456789"
           },
           "gender": {
             "type": "string",
-            "description": "User's gender",
-            "example": "male"
+            "description": "User's gander address",
+            "example": "woman"
           }
         }
       },
-      "UpdateUserResponse": {
-        "type": "object",
-        "properties": {
-          "name": {
-            "type": "string",
-            "description": "User name",
-            "example": "User name"
+        "UpdateUserResponse": {
+          "type": "object",
+          "properties": {
+            "user": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "description": "User's name",
+                  "example": "User name"
+                },
+                "email": {
+                  "type": "string",
+                  "format": "email",
+                  "description": "User's email address",
+                  "example": "user@example.com"
+                },
+                "gender": {
+                  "type": "string",
+                  "description": "User's gender",
+                  "example": "woman"
+                },
+                "dailyNorma": {
+                  "type": "number",
+                  "description": "User's dailyNorma address",
+                  "example": 2
+                }
+              }
+            }
+            }
           },
-          "gender": {
-            "type": "string",
-            "description": "User's gender",
-            "example": "male"
-          }
-        }
-      },
+           
       "UpdateAvatarRequest": {
         "type": "file",
         "required": [],
